cmake_minimum_required(VERSION 3.17)
project(exqudens_cpp_cmake_windows)

set(CMAKE_CXX_STANDARD 20)

add_executable(main_1 src/main/cpp/main_1.cpp)
add_executable(main_2 src/main/cpp/main_2.cpp)
add_executable(main_3 src/main/cpp/main_3.cpp)
add_executable(main_4 src/main/cpp/main_4.cpp)
add_executable(main_99 src/main/cpp/main_99.cpp)
